--- a/css/style.css
+++ b/css/style.css
@@ -120,10 +120,10 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background: rgba(0, 0, 0, 0.85);
+    background: #fff;
     z-index: 99;
     box-shadow: 0px 2px 10px 0px rgba(2, 2, 2, 0.1);
-    height: 110px;
+    height: 80px;
     transition: .3s;
 }
 .headerBg { background: #000; transition: .3s; }
